# smolvm

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  GUIDE.md  Makefile.toml  README.md  TASKS.md  build.rs  deno.json  manifest.json
.github/workflows/: release.yml
cli/: smolctl.ts
crates/smolvm-agent/: Cargo.toml
crates/smolvm-agent/src/: main.rs  oci.rs  proxy.rs  storage.rs
crates/smolvm-pack/: Cargo.toml
crates/smolvm-pack/src/: detect.rs
crates/smolvm-protocol/: Cargo.toml
crates/smolvm-protocol/src/: lib.rs
deploy/: README.md  smolvm.service
docs/: API.md  BUGFIX-disk-leak-sparse-copy.md  DEVELOPMENT.md  FINDING-libkrun-cow-snapshots.md  GUIDE.md  TUNNEL.md
docs/_archive/: GUIDE-archive.md  SECURITY.md  TODO-archive.md  docs-roadmap.md  docs-tutorials.md  docs-updates.md  evaluation-findings.md  ralph-on-smolvm.md  smolvm-feature-catalog.md
docs/research/: README.md  REDUCE-antspace-platform-gaps.md  antspace-claude-code.md  landscape.md  nvidia-openshell.md
examples/doom-web/: doom.smolfile
examples/openclaw-app/: openclaw.smolfile
lib/: libkrun.dylib  libkrunfw.5.dylib
lib/linux-aarch64/: libkrunfw.so.5
mcp-servers/: README.md  exec.sh  exec.ts  filesystem.sh  filesystem.ts  git.sh  git.ts
playtests/: 01-first-contact.md  02-build-something.md  03-break-it.md  04-agent-autonomy.md  05-fork-and-compare.md  06-disaster-recovery.md  07-sdk-ergonomics.md  08-web-ui-walkthrough.md  09-tunnel-to-the-world.md  10-stress-and-limits.md  PLAYTEST-LOG.md  README.md  e2e-playtest.sh
scripts/: build-agent-rootfs.sh  build-dist.sh  dns-filter.sh  install-local.sh
sdk-py/: README.md  pyproject.toml  test_sdk.py
sdk-py/smolvm/: __init__.py  client.py  fleet.py  microvm.py  sandbox.py  smolvm_client.py  types.py
sdk-ts/: README.md  client.ts  deno.json  fleet.ts  machine.ts  microvm.ts  mod.ts  sandbox.ts  smolvm-client.ts  test-checkpoint.ts  test.ts  types.ts
server/scripts/: dns-filter.sh  install.sh
server/tests/: test_smolfile.sh
smolvm-plus/scripts/: update-formula.sh
smolvm-plus/src/: main.rs
smolvm-plus/tests/: bench_container.sh
src/: config.rs  lib.rs  main.rs  network.rs  provider.rs  provider_local.rs  provider_remote.rs  storage.rs
src/agent/: client.rs  launcher.rs  launcher_dynamic.rs  manager.rs  mod.rs
src/api/: auth.rs  dns_filter.rs  errors.rs  metrics.rs  mod.rs  starters.rs  state.rs  supervisor.rs  types.rs  validation.rs
src/cli/: machine.rs  mod.rs  pack.rs  pack_run.rs  sandbox.rs  serve.rs  vm_common.rs
src/data/: resources.rs
src/proxy/: handler.rs  mod.rs  services.rs
src/vm/: config.rs
starters/: README.md
tests/: README.md  _helpers.ts  bench_container.sh  bench_vm_startup.sh  common.sh  run_all.sh  test-agents-in-vm.ts  test-audit-fixes.ts  test-capabilities.ts  test-containers-debug.ts  test-fleet.ts  test-isolation.ts  test-lifecycle.ts  test-machine.ts  test-remote.ts  test-sandbox.ts  test-secret-proxy.ts  test-sync.ts  test_api.sh  test_cli.sh  test_microvm.sh  test_pack.sh  test_sandbox.sh  test_smolfile.sh
(+49 files in other folders)
