[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smolvm"
version = "0.1.0"
description = "Python SDK for smolvm — OCI-native microVM runtime"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio"]
